tests/errors/first_stage/label/invalid_name/invalid_name.as
; invalid label name
my_label: mov r1, r2